Wed Jan 23 22:47:34 2008  Yusuke Endoh  <mame@tsg.ne.jp>

	* test/ruby/test_struct.rb: add tests to achieve over 90% test
	  coverage of struct.c.
	* test/ruby/test_sprintf.rb: ditto for sprintf.c.
	* test/ruby/test_math.rb: ditto for math.c.

Wed Jan 23 22:14:28 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* enc/trans/japanese.c (rb_from_Windows_31J, rb_to_Windows_31J):
	  provisional workaround for Windows-31J.  [ruby-dev:33320]

Wed Jan 23 15:25:04 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* time.c (time_strftime): copy encoding from format.  [ruby-dev:33303]

Wed Jan 23 15:04:11 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (str_make_independent): should set length.

	* string.c (rb_str_associate): hide associated array from ObjectSpace.

	* string.c (rb_str_associated): return associated array with freezing
	  instead of false.  [ruby-dev:33282]

	* string.c (rb_str_freeze): freeze associated array together.

Wed Jan 23 13:39:48 2008  Tanaka Akira  <akr@fsij.org>

	* re.c (rb_reg_prepare_re): fix SEGV by
	  /a/ =~ "aa".force_encoding("utf-16be").

Wed Jan 23 11:53:26 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (str_mod_check, str_nth, str_offset): consitfied.

	* string.c (rb_str_dump): dump in ASCII-8BIT always.

Wed Jan 23 10:18:10 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval_method.c (rb_export_method): set ruby_vm_redefined_flag for
	  visibility change as well.  reported by K.Kosako in
	  http://d.hatena.ne.jp/kkos/20080122#1201012720.

Tue Jan 22 22:26:23 2008  Yusuke Endoh  <mame@tsg.ne.jp>

	* test/ruby/test_bignum.rb: change some tests because rational
	  redefines Bignum#quo and Bignum#**.

Tue Jan 22 20:58:15 2008  NAKAMURA Usaku  <usa@ruby-lang.org>

	* lib/mkmf.rb (create_makefile): need to output sodir rule.

Tue Jan 22 19:37:16 2008  NAKAMURA Usaku  <usa@ruby-lang.org>

	* lib/mkmf.rb (create_makefile): lib files shoudn't depend on install