@@ -128,7 +128,7 @@ math_acos(VALUE obj, VALUE x)
  *  call-seq:
  *     Math.asin(x)    => float
  *  
- *  Computes the arc sine of <i>x</i>. Returns 0..PI.
+ *  Computes the arc sine of <i>x</i>. Returns -{PI/2} .. {PI/2}.
  */
 
 static VALUE
